
    ENGINE:
        Class Perm<n>:
            - Added ++ operators and isConjugacyMinimal() to the generic
              Perm<n> class, making it more consistent with the specialised
              classes for smaller n.
            - Switched the generic Perm<n>::sign() from a low-overhead
              quadratic algorithm to a higher-overhead linear algorithm.

Version 7.2  [ 28 October, 2022 ]

    GENERAL:
        - Regina now has docstrings throughout its Python module.  These are
          extracted automatically from the hand-written C++ documentation, so
          you will still find C++ terminology.  Nevertheless, these are now
          available in Python for all of Regina's classes and functions.
        - Began moving to a more readable markdown format for documentation
          in the C++ headers.  A lot of work is already done here, but this is
          an ongoing project.  See also the new style guide for API docs in
          the Regina Handbook (in the new chapter on Contributing to Regina).
    ENGINE:
        Class DegreeLessThan, DegreeGreaterThan:
            - Deprecated, since these are one-liners that can be done using a
              lambda instead.  These classes will eventually be removed.
        Class Example<3>:
            - Renamed whiteheadLink() to whitehead().  The old name is kept
              as a deprecated alias.
        Class Example<4>:
            - Shrunk k3() to 54 pentachora (thanks again to Rhuaidi Burke).
        Class Face<dim, subdim>
            - Routines face<lowerdim> and faceMapping<lowerdim> now explicitly
              require 0 <= lowerdim < subdim (though this was always enforced
              in Python, and the only meaningful scenario in C++ that this
              could possibly rule out is the trivial case lowerdim == subdim).
        Class HyperEncoding:
            - New static function empty().
        Class ListView<...>:
            - Added equality operators (== and !=).