@@ -1,45 +1,40 @@
 
 # The code below generates the hard-coded minimalAutGroup arrays in covers.cpp.
 #
-# It was designed to run under Regina 6.0.
+# It was designed to run under Regina 7.3.
 #
-# - Ben Burton, 24 July 2021
+# - Ben Burton, 2 November 2022
 
-def genAut(cls, code2 = False):
+def genAut(permClass, conjClass, code2 = False):
     results = []
     maxAut = 0
-    for p in cls.Sn:
-        aut = []    # all automorphisms
-        idemp = []  # all automorphisms that are their own inverse
-        other = []  # all automorphisms that are not their own inverse
 
-        minimal = True
-        for j in cls.Sn:
+    c = conjClass()
+    while c:
+        p = c.rep()
+        c.inc()
+
+        aut = []    # all automorphisms
+
+        for j in permClass.Sn:
             conj = j * p * j.inverse()
             if conj.SnIndex() < p.SnIndex():
-                minimal = False
+                print('ERROR: Representative not minimal!')
                 break
             elif conj == p:
                 idx = j.SnIndex()
                 aut.append(idx)
-                if j == j.inverse():
-                    idemp.append(idx)
-                else:
-                    other.append(idx)
-        if minimal:
-            if len(aut) == cls.nPerms:
-                aut = []
-                idemp = []
-                other = []
-            elif len(aut) > maxAut:
-                maxAut = len(aut)
-            results.append((p.SnIndex(), aut, idemp, other))
+        if len(aut) == permClass.nPerms:
+            aut = []
+        elif len(aut) > maxAut:
+            maxAut = len(aut)
+        results.append((p.SnIndex(), aut))
 
     print('Max #aut:', maxAut)
     for line in range(len(results)):
         r = results[line]
         code = '/* ' + str(r[0]) + ' */ {'
-        if len(r[1]) == cls.nPerms:
+        if len(r[1]) == permClass.nPerms:
             code = code + '-1'
         else:
             for i in range(maxAut + 1):
@@ -57,14 +52,16 @@ def genAut(cls, code2 = False):
             code = code + ','
         print(code)
 
-genAut(Perm2)
+genAut(Perm2, PermClass2)
 print()
-genAut(Perm3)
+genAut(Perm3, PermClass3)
 print()
-genAut(Perm4, True)
+genAut(Perm4, PermClass4, True)
 print()
-genAut(Perm5, True)
+genAut(Perm5, PermClass5, True)
 print()
-genAut(Perm6, True)
+genAut(Perm6, PermClass6, True)
 print()
-genAut(Perm7, True)
+genAut(Perm7, PermClass7, True)
+print()
+genAut(Perm8, PermClass8)
